# livekit-ffi-ue

./: .gitignore  README.md
.claude/: settings.local.json
.github/agents/: my-agent.md
.github/workflows/: build-ffi.yml
docs/: ADAPTING_TO_OTHER_PLUGIN.md  ARCHITECTURE.md  EXAMPLES.md  FFI_API_GUIDE.md  LOCAL_LIVEKIT_QUICKSTART.md  README.md  TOKEN_MINTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
livekit_ffi/: Cargo.toml  README.md
livekit_ffi/.cargo/: config.toml
livekit_ffi/include/: livekit_ffi.h
livekit_ffi/src/: backend_livekit.rs  backend_stub.rs  lib.rs
tools/: build.bak.ps1  build.ps1  generate-test-tokens.ps1  link-plugin.ps1  mint-token.ps1  package-plugin.ps1  package.ps1  test_tokens.txt
tools/token-gen/: gen-token.js  package-lock.json  package.json
tools/token-mint/: index.js  package.json
ue/LiveKitSandbox/: LiveKitSandbox.uproject  README.md
ue/LiveKitSandbox/Config/: DefaultEngine.ini
ue/LiveKitSandbox/Content/: Publisher.uasset  Subscriber.uasset  TestMap.umap
ue/LiveKitSandbox/Plugins/LiveKitBridge/: LiveKitBridge.uplugin
ue/LiveKitSandbox/Plugins/LiveKitBridge/Source/LiveKitBridge/: LiveKitBridge.Build.cs
ue/LiveKitSandbox/Plugins/LiveKitBridge/Source/LiveKitBridge/Private/: LiveKitBridgeModule.cpp  LiveKitPublisherComponent.cpp
ue/LiveKitSandbox/Plugins/LiveKitBridge/Source/LiveKitBridge/Public/: LiveKitBridgeModule.h  LiveKitClient.hpp  LiveKitPublisherComponent.h
ue/LiveKitSandbox/Source/: LiveKitSandbox.Target.cs  LiveKitSandboxEditor.Target.cs
ue/LiveKitSandbox/Source/LiveKitSandbox/: LiveKitSandbox.Build.cs  LiveKitSandbox.cpp
ue/Plugins/LiveKitBridge/: LiveKitBridge.uplugin
ue/Plugins/LiveKitBridge/Source/LiveKitBridge/: LiveKitBridge.Build.cs
ue/Plugins/LiveKitBridge/Source/LiveKitBridge/Private/: LiveKitBridgeModule.cpp  LiveKitPublisherComponent.cpp
ue/Plugins/LiveKitBridge/Source/LiveKitBridge/Public/: LiveKitBridgeModule.h  LiveKitClient.hpp  LiveKitPublisherComponent.h
